# Hackaton2024

./: readme.MD
browserExtension/: background.js  index.html  index.js  manifest.json
browserExtension/components/: badge.html
scoring/: pyproject.toml
scoring/data/: badReviews.json  goodReviews.json  random_forest_model.pkl
scoring/notebooks/: LinearRegression.ipynb  LinearRegression2.ipynb  RandomForestRegressor.ipynb  hardcoded_weirghts.ipynb  model.ipynb  predict.ipynb  weights.ipynb
server/: .gitignore  Dockerfile  pyproject.toml
server/app/: server.py
