[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.8.2"
langgraph = "^0.2.34"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.31"
langchain=">=0.2.16"
langchain-openai=">=0.2.3"
torch=">=2.5.0"
transformers=">=4.46.0"
onnxruntime=">=1.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
